@@ -1,3 +1,7 @@
+2003-05-13  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/waitpid.c: Use waitpid syscall is available.
+
 2003-05-12  Steven Munroe  <sjmunroe@us.ibm.com>
 
 	* sysdeps/powerpc/bits/atomic.h
